package elements;

public class Bus {

    private int heldValue;

    public Bus() {
    }

    public int getHeldValue() {
        return heldValue;
    }

    public void setHeldValue(int heldValue) {
        this.heldValue = heldValue;
    }
}
